add_executable(SampleOrderSystem_Tests
    test_placeholder.cpp
    test_sample.cpp
    test_order.cpp
    test_production_job.cpp
    test_sample_repository.cpp
    test_order_repository.cpp
    test_sample_controller.cpp
    test_order_controller.cpp
    test_production_controller.cpp
    test_monitor_controller.cpp
    test_release_controller.cpp
    test_views.cpp
    ${CMAKE_SOURCE_DIR}/src/json/JsonValue.cpp
    ${CMAKE_SOURCE_DIR}/src/json/JsonParser.cpp
    ${CMAKE_SOURCE_DIR}/src/json/JsonSerializer.cpp
    ${CMAKE_SOURCE_DIR}/src/model/Sample.cpp
    ${CMAKE_SOURCE_DIR}/src/model/Order.cpp
    ${CMAKE_SOURCE_DIR}/src/model/ProductionJob.cpp
    ${CMAKE_SOURCE_DIR}/src/repository/SampleRepository.cpp
    ${CMAKE_SOURCE_DIR}/src/repository/OrderRepository.cpp
    ${CMAKE_SOURCE_DIR}/src/controller/SampleController.cpp
    ${CMAKE_SOURCE_DIR}/src/controller/OrderController.cpp
    ${CMAKE_SOURCE_DIR}/src/controller/ProductionController.cpp
    ${CMAKE_SOURCE_DIR}/src/controller/MonitorController.cpp
    ${CMAKE_SOURCE_DIR}/src/controller/ReleaseController.cpp
    ${CMAKE_SOURCE_DIR}/src/view/SampleView.cpp
    ${CMAKE_SOURCE_DIR}/src/view/OrderView.cpp
    ${CMAKE_SOURCE_DIR}/src/view/MonitorView.cpp
    ${CMAKE_SOURCE_DIR}/src/view/ProductionView.cpp
    ${CMAKE_SOURCE_DIR}/src/view/ReleaseView.cpp
    ${CMAKE_SOURCE_DIR}/src/view/MainView.cpp
)
target_include_directories(SampleOrderSystem_Tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(SampleOrderSystem_Tests GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(SampleOrderSystem_Tests)
